--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Solutions to Advent of Code 2021 challenge",
   "scripts": {
-    "day1": "npm run day1:part1",
-    "day1:part1": "node day-01/part-1.js"
+    "day1": "npm run day1:part1 && npm run day1:part2",
+    "day1:part1": "node day-01/part-1.js",
+    "day1:part2": "node day-01/part-2.js"
   },
   "author": "Rafal Poreba"
 }
